OLMIS-922: Updated build process

--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-"requisitionServerURL": "http://localhost:8080/requisition"
+  "app": {
+    "src": "./src/main",
+    "dest": "./build"
+  },
+  "requisitionServerURL": "http://localhost:8080/requisition"
 }
