--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-serve": "~0.1.6",
     "grunt-properties-to-json": "~0.6.0",
     "grunt-karma": "~2.0.0",
-    "grunt-text-replace": "~0.4.0"
+    "grunt-text-replace": "~0.4.0",
+    "grunt-contrib-copy": "~1.0.0"
   }
 }
