--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,7 @@ version: "2"
 services:
   requisition-refui:
     image: openlmis/requisition-refui
+    ports:
+      - "9000:9000"
     volumes:
       - '.:/app'
