OLMIS-922: Added missing pages for requisition

--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - '.:/app'
     command:
-      - 'grunt'
+      - 'grunt build'
   image:
     build: .
     image: openlmis/requisition-refui
