OLMIS-922: Added Transifex to build, migrated karma/jasmine unit testing

--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - '.:/app'
     command:
-      - 'grunt build'
+      - './build.sh'
   image:
     build: .
     image: openlmis/requisition-refui
