--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "grunt-lesslint": "~0.15.0",
     "karma": "^0.13.0",
     "karma-coverage": "^0.2.7",
-    "karma-firefox-launcher": "^0.1.4",
     "karma-htmlfile-reporter": "~0.1",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-jasmine": "~0.1.0",
     "matchdep": "~0.1.2",
     "grunt-serve": "~0.1.6",
-    "grunt-properties-to-json": "~0.6.0",
     "grunt-karma": "~2.0.0",
     "grunt-text-replace": "~0.4.0",
     "grunt-contrib-copy": "~1.0.0"
