--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-serve": "~0.1.6",
     "grunt-karma": "~2.0.0",
     "grunt-text-replace": "~0.4.0",
-    "grunt-contrib-copy": "~1.0.0"
+    "grunt-contrib-copy": "~1.0.0",
+    "karma-junit-reporter": "~1.1.0"
   }
 }
