OLMIS-925: User authenticates using Auth Service in Requisition-UI
Squashed commit of the following:

commit 6772d801c73567264ef2aa03a2c1bf63bb68c147
Author: Weronika Ciecierska <wciecierska@soldevelo.com>
Date:   Tue Sep 6 10:01:45 2016 +0200

    OLMIS-925: Fixed Jasmine tests after changes, fixed indentation in code

    - Fixed login controller, navigation controller and header controller tests
    - Fixed indentation in code

commit f9c1db156e3045079903122a7dd5182f593f1290
Author: Weronika Ciecierska <wciecierska@soldevelo.com>
Date:   Mon Sep 5 15:00:02 2016 +0200

    OLMIS-925: Added ability to logout and fixed logging in

    - Changed requisitionServerURL to openlmisServerURL - it will hold info about location auth & requisition,
    ex if openlmisServerURL = http://localhost then auth service is located under http://localhost/auth and requisition service under http://localhost/requisition.
    - Made it possible to retrieve info about user from authentication service using reference data user id.
    - Added posibility to logout.
    - Fixed messages in logging in, added hardcoded user's rights so that navigation bar is visible after logging in.
    - Changed homepage in nginx from login.html to index.html.
    - Updated README.

commit 1ba2548cd29d1ae9bb67234f7cea5ac3bdd26d11
Author: Weronika Ciecierska <wciecierska@soldevelo.com>
Date:   Fri Sep 2 15:55:05 2016 +0200

    OLMIS-925: Added possibility to log in using UI

commit f763f42a0ec0be1e5c277827954936fed287206e
Author: Weronika Ciecierska <wciecierska@soldevelo.com>
Date:   Fri Sep 2 13:28:49 2016 +0200login.html

    OLMIS-925: Fixed path to mesages in locale-controller nad message-service

commit 1f33abc43ee0e1cdca31cae1bbda2c459378e6f6
Author: Weronika Ciecierska <wciecierska@soldevelo.com>
Date:   Fri Sep 2 12:05:55 2016 +0200

    OLMIS-925: Running requisition-UI with auth and requisition microservices

--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "src": "./src/main",
     "dest": "./build"
   },
-  "requisitionServerURL": "http://localhost:8080/requisition"
+  "openlmisServerURL": "http://localhost"
 }
