--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-less": "~0.8.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-gulp": "^1.0.1",
+    "grunt-karma": "~2.0.0",
     "grunt-lesslint": "~0.15.0",
+    "grunt-serve": "~0.1.6",
+    "grunt-text-replace": "~0.4.0",
+    "gulp": "^3.9.1",
     "karma": "^0.13.0",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-coverage": "^0.2.7",
     "karma-htmlfile-reporter": "~0.1",
-    "karma-chrome-launcher": "~2.0.0",
     "karma-jasmine": "~0.1.0",
+    "karma-junit-reporter": "~1.1.0",
     "matchdep": "~0.1.2",
-    "grunt-serve": "~0.1.6",
-    "grunt-karma": "~2.0.0",
-    "grunt-text-replace": "~0.4.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "karma-junit-reporter": "~1.1.0"
+    "sc5-styleguide": "^1.1.2"
   }
 }
