--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-jasmine": "~0.1.0",
     "karma-junit-reporter": "~1.1.0",
     "matchdep": "~0.1.2",
-    "sc5-styleguide": "^1.1.2"
+    "sc5-styleguide": "^1.1.2",
+    "wiredep": "^4.0.0"
   }
 }
