OLMIS-1046 Made production image host UI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   requisition-refui:
-    image: openlmis/requisition-refui
+    image: openlmis/dev-ui
     ports:
       - "9000:9000"
     volumes:
