OLMIS-1040: Made auth work with ui-router
Changed application structure so that auth fits in with ui-router driven
framework. This includes moving header/navigation into dashboard.

Made  openlmis-auth module, so that all related code is self contained.

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "src": "./src/main",
     "dest": "./build"
   },
-  "openlmisServerURL": "http://localhost"
+  "openlmisServerURL": "http://localhost",
+  "authServiceURL": "/auth"
 }
