Added PhantomJS for unit testing
Added PhantomJS to Karma tests, and updated tests so they pass. Tests
for offline functionality were turned off. Loaded in HTML templates
using ngHtml, and added watch command for a better dev experience.
Chrome related files have been removed.

Added proxy server and changed to grunt-connect from grunt-serve

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,13 +1,9 @@
 FROM debian:jessie
 
 WORKDIR /root
-RUN apt-get update && apt-get install -y xvfb chromium bash nodejs npm transifex-client git
+RUN apt-get update && apt-get install -y bash libfontconfig nodejs npm transifex-client git
 RUN ln -s /usr/bin/nodejs /usr/bin/node
-RUN npm install -g bower grunt-cli
-
-ADD xvfb-chromium /usr/bin/xvfb-chromium
-RUN ln -s /usr/bin/xvfb-chromium /usr/bin/google-chrome
-RUN ln -s /usr/bin/xvfb-chromium /usr/bin/chromium-browser
+RUN npm install -g bower grunt-cli phantomjs-prebuilt
 
 WORKDIR /app
 VOLUME ["/app"]
