--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,9 +1,10 @@
 FROM debian:jessie
 
 WORKDIR /root
-RUN apt-get update && apt-get install -y bash libfontconfig nodejs npm transifex-client git phantomjs
+RUN apt-get update && apt-get install -y bash libfontconfig nodejs npm transifex-client git
 RUN ln -s /usr/bin/nodejs /usr/bin/node
-RUN npm install -g bower grunt-cli
+RUN npm install -g bower grunt-cli 
+#RUN npm install -g phantomjs-prebuilt
 
 WORKDIR /app
 VOLUME ["/app"]
