OLMIS-1043: Added RequisitionURL factory

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
     "dest": "./build"
   },
   "openlmisServerURL": "",
-  "authServiceURL": "/auth"
+  "authServiceURL": "/auth",
+  "requisitionServiceURL": "/requisition"
 }
