--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "app": {
     "src": "./src/main",
-    "dest": "./build"
+    "dest": "./build",
+    "bower_components": "./bower_components"
   },
   "openlmisServerURL": "",
   "authServiceURL": "/auth",
