--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "grunt-sasslint": "0.0.6",
     "grunt-text-replace": "~0.4.0",
     "gulp": "^3.9.1",
+    "gulp-bless": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "karma": "^0.13.0",
     "karma-coverage": "^0.2.7",
     "karma-htmlfile-reporter": "~0.1",
