--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "AGPL-3.0",
   "devDependencies": {
+    "any-promise": "^1.3.0",
     "bower": "^1.7.9",
     "cors-anywhere": "^0.4.0",
     "grunt": "~0.4.1",
@@ -36,7 +37,6 @@
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "matchdep": "~0.1.2",
-    "promise-polyfill": "6.0.2",
     "sc5-styleguide": "^1.1.2",
     "wiredep": "^4.0.0"
   }
