--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "any-promise": "^1.3.0",
+    "bluebird": "^3.4.6",
     "bower": "^1.7.9",
     "cors-anywhere": "^0.4.0",
     "grunt": "~0.4.1",
@@ -29,6 +30,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "jade": "^1.11.0",
     "karma": "^0.13.0",
     "karma-coverage": "^0.2.7",
     "karma-htmlfile-reporter": "~0.1",
