--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -3,8 +3,7 @@ FROM debian:jessie
 WORKDIR /root
 RUN apt-get update && apt-get install -y bash libfontconfig nodejs npm transifex-client git
 RUN ln -s /usr/bin/nodejs /usr/bin/node
-RUN npm install -g bower grunt-cli 
-#RUN npm install -g phantomjs-prebuilt
+RUN npm install -g bower grunt-cli phantomjs-prebuilt
 
 WORKDIR /app
 VOLUME ["/app"]
