--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "1.6.0",
     "jade": "^1.11.0",
     "karma": "^0.13.0",
     "karma-coverage": "^0.2.7",
