Styleguide builds to build/styleguide
Got the styleguide to (mostly) correctly buid, by updating source paths.
While doing this I:
- Removed non-bower font-awesome fonts
- Removed non-used flat icons and dashboard
- Moved overview.md to top-level
- Took unit tests out of build

--- a/config.json
+++ b/config.json
@@ -4,6 +4,10 @@
     "dest": "./build",
     "bower_components": "./bower_components"
   },
+  "styleguide": {
+  	"src": "./src/main",
+  	"dest": "./build/styleguide"
+  },
   "openlmisServerURL": "",
   "authServiceURL": "/auth",
   "requisitionServiceURL": "/requisition"
