OLMIS-1005: add authorize requisition
also added external modal service

--- a/bower.json
+++ b/bower.json
@@ -19,14 +19,15 @@
     "angular-local-storage": "*",
     "select2": "3.4.2",
     "underscore": "*",
-    "uniform": "*",
     "angular-bootstrap": "0.1.0",
     "angular-ui-grid": "^3.2.9",
     "angular-ui-sortable": "^0.14.3",
     "jquery-ui": "^1",
     "angular-ui-router": "0.3.1",
     "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "bootbox": "4.4.0",
+    "ngBootbox": "0.1.3"
   },
   "overrides": {
     "jquery": {
