--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "matchdep": "~0.1.2",
+    "node-bourbon": "^4.2.8",
     "sc5-styleguide": "^1.1.2",
     "wiredep": "^4.0.0"
   }
