OLMIS-1105, add basic versioning for CI and set to beta snapshot
This should only be a temp solution to setting the version, the properties file is only used by CI when publishing to DockerHub.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "openlmis",
-  "version": "0.0.1",
+  "version": "3.0.0-beta-SNAPSHOT",
   "ignore": [
     "**/.*",
     "node_modules",
