--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openlmis-requisition-refUI",
-  "version": "0.0.1",
+  "version": "3.0.0-beta-SNAPSHOT",
   "repository": {
     "type": "git",
     "url": "https://github.com/OpenLMIS/openlmis-requisition-refUI"
