--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bower": "^1.7.9",
     "cors-anywhere": "^0.4.0",
     "grunt": "~0.4.1",
+    "grunt-angular-templates": "~1.1.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
@@ -37,7 +38,6 @@
     "karma-htmlfile-reporter": "~0.1",
     "karma-jasmine": "~0.1.0",
     "karma-junit-reporter": "~1.1.0",
-    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "matchdep": "~0.1.2",
     "node-bourbon": "^4.2.8",
