--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "bootbox": "4.4.0",
     "ngBootbox": "0.1.3",
     "angular-ui-select": "^0.19.5",
-    "angularjs-dropdown-multiselect": "*"
+    "angularjs-dropdown-multiselect": "*",
+    "offline": "^0.7.18"
   },
   "overrides": {
     "jquery": {
