--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-gulp": "^1.0.1",
     "grunt-karma": "~2.0.0",
     "grunt-ngdocs": "^0.2.10",
+    "grunt-notify": "^0.4.5",
     "grunt-sass": "^1.2.1",
     "grunt-sasslint": "0.0.6",
     "grunt-text-replace": "~0.4.0",
