Updated to NodeJS 6.9.1 (LTS)
This meant:
- Grunt to v1, and related packages
- Removing SC5 Styleguide
- Adding Grunt-KSS

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,8 +1,11 @@
 FROM debian:jessie
 
 WORKDIR /root
-RUN apt-get update && apt-get install -y bash libfontconfig nodejs npm transifex-client git
-RUN ln -s /usr/bin/nodejs /usr/bin/node
+RUN apt-get update && apt-get install -y bash libfontconfig transifex-client git curl
+
+RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
+RUN apt-get install -y nodejs
+
 RUN npm install -g bower grunt-cli phantomjs-prebuilt
 
 WORKDIR /app
