--- a/package.json
+++ b/package.json
@@ -11,39 +11,40 @@
     "bluebird": "^3.4.6",
     "bower": "^1.7.9",
     "cors-anywhere": "^0.4.0",
-    "grunt": "~0.4.1",
-    "grunt-angular-templates": "~1.1.0",
-    "grunt-contrib-clean": "~0.5.0",
+    "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-appcache": "^0.2.0",
+    "grunt-contrib-clean": "^1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1",
+    "grunt-contrib-uglify": "^2",
+    "grunt-contrib-watch": "^1",
     "grunt-gulp": "^1.0.1",
-    "grunt-karma": "~2.0.0",
+    "grunt-karma": "^2.0.0",
+    "grunt-kss": "^5.0.1",
     "grunt-ngdocs": "^0.2.10",
     "grunt-notify": "^0.4.5",
     "grunt-sass": "^1.2.1",
-    "grunt-sasslint": "0.0.6",
-    "grunt-text-replace": "~0.4.0",
+    "grunt-sass-lint": "^0.2.2",
+    "grunt-text-replace": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-bless": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "1.6.0",
+    "gulp-sourcemaps": "^1",
     "jade": "^1.11.0",
-    "karma": "^0.13.0",
-    "karma-coverage": "^0.2.7",
-    "karma-htmlfile-reporter": "~0.1",
-    "karma-jasmine": "~0.1.0",
-    "karma-junit-reporter": "~1.1.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1",
+    "karma-coverage": "^1",
+    "karma-htmlfile-reporter": "^0.3",
+    "karma-jasmine": "^1",
+    "karma-junit-reporter": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "matchdep": "~0.1.2",
+    "matchdep": "^1",
     "node-bourbon": "^4.2.8",
-    "sc5-styleguide": "^1.1.2",
-    "wiredep": "^4.0.0",
-    "grunt-appcache": "^0.2.0"
+    "wiredep": "^4.0.0"
   }
 }
