Got phantomJS to install correctly

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,15 +1,17 @@
 FROM debian:jessie
 
 WORKDIR /root
-RUN apt-get update && apt-get install -y bash libfontconfig transifex-client git curl
+
+# NOTE bzip2 is required by PhantomJS-prebuilt
+RUN apt-get update && apt-get install -y bash libfontconfig transifex-client git curl bzip2
 
 RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
 RUN apt-get install -y nodejs
 
-RUN npm install -g bower grunt-cli phantomjs-prebuilt
+#RUN npm install -g bower grunt-cli phantomjs-prebuilt
 
 WORKDIR /app
 VOLUME ["/app"]
 
 EXPOSE 9000
-CMD npm install --no-optional && bower install --allow-root --config.interactive=false && bash
+#CMD npm install --no-optional && bower install --allow-root --config.interactive=false && bash
