--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "angularjs-dropdown-multiselect": "*",
     "offline": "^0.7.18",
     "angular-filter": "^0.5.11",
-    "angular-http-auth": "^1.5.0"
+    "angular-http-auth": "^1.5.0",
+    "angular-drag-and-drop-lists": "*"
   },
   "overrides": {
     "jquery": {
