--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -11,15 +11,14 @@ RUN apt-get install -y nodejs
 
 RUN npm install -g bower grunt-cli phantomjs-prebuilt
 
-# Need npm/bower package files from /app
 WORKDIR /app
 VOLUME ["/app"]
 
 # Delete any existing packages (incase they are hiding)
-RUN rm -rf node_modules/ bower_components/
+RUN cd /app; rm -rf node_modules/ bower_components/
 
-RUN npm install --no-optional
-RUN bower install --allow-root --config.interactive=false 
+RUN cd /app; npm install --no-optional
+RUN cd /app; bower install --allow-root --config.interactive=false 
 
 # Port 9000 used for dev server
 EXPOSE 9000
