--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "offline": "^0.7.18",
     "angular-filter": "^0.5.11",
     "angular-http-auth": "^1.5.0",
-    "angular-drag-and-drop-lists": "*"
+    "angular-drag-and-drop-lists": "*",
+    "selectize": "^0.12.4"
   },
   "overrides": {
     "jquery": {
