--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
     "dest": "./build/docs"
   },
   "openlmisServerURL": "",
-  "authServiceURL": "/auth",
-  "requisitionServiceURL": "/requisition"
+  "authServiceURL": "/",
+  "requisitionServiceURL": "/"
 }
