--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "any-promise": "^1.3.0",
     "bluebird": "^3.4.6",
     "bower": "^1.7.9",
+    "command-line-args": "^3.0.4",
     "cors-anywhere": "^0.4.0",
+    "deasync": "^0.1.9",
     "grunt": "^1.0.1",
     "grunt-angular-templates": "^1.1.0",
     "grunt-appcache": "^0.2.0",
@@ -35,6 +37,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1",
+    "ip": "^1.1.4",
     "jade": "^1.11.0",
     "karma": "^1",
     "karma-coverage": "^1",
@@ -44,9 +47,11 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "matchdep": "^1",
     "node-bourbon": "^4.2.8",
-    "wiredep": "^4.0.0",
-    "sc5-styleguide": "^1.1.2"
+    "raml-parser": "^0.8.18",
+    "sc5-styleguide": "^1.1.2",
+    "wiredep": "^4.0.0"
   },
-
-  "files": [ "consul/package.json" ]
+  "files": [
+    "consul/package.json"
+  ]
 }
