--- a/consul/config.json
+++ b/consul/config.json
@@ -1,7 +1,11 @@
 {
-  "name": "requisition-refui",
+  "service": {
+    "Name": "requisition-refui",
+    "Port": 80,
+    "Tags": ["openlmis-service"]
+  },
   "path": [
-    "public",
-    "public/<all>"
+    "",
+    "<all>"
   ]
 }
