--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     location / {
-        root /usr/share/nginx/html/public;
+        root /usr/share/nginx/html;
         index index.html index.html;
     }
 }
