Removed SC5 styleguide

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "matchdep": "^1",
     "node-bourbon": "^4.2.8",
-    "sc5-styleguide": "^1.1.2",
     "wiredep": "^4.0.0"
-  }
+  },
+  "dependencies": {}
 }
