--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "offline": "^0.7",
     "angular-filter": "^0.5",
     "angular-http-auth": "^1.5",
-    "angular-drag-and-drop-lists": "*"
+    "angular-drag-and-drop-lists": "*",
+    "ngstorage": "0.3.11"
   },
   "overrides": {
     "jquery": {
