Removed auth_server_client.json
Removed the JSON file for auth_server_client, and instead added
variables that are replaced at build time by to config.json.

--- a/config.json
+++ b/config.json
@@ -14,5 +14,9 @@
   },
   "openlmisServerURL": "",
   "authServiceURL": "/",
-  "requisitionServiceURL": "/"
+  "requisitionServiceURL": "/",
+  "authService": {
+    "clientId": "trusted-client",
+    "clientSecret": "secret"
+  }
 }
