OLMIS-1550: add orders and pod view modules

--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
   },
   "openlmisServerURL": "",
   "authServiceURL": "/",
-  "requisitionServiceURL": "/"
+  "requisitionServiceURL": "/",
+  "ordersServiceURL": "/"
 }
