OLMIS-1550: adjusting pod services to new pod dto

--- a/config.json
+++ b/config.json
@@ -15,5 +15,5 @@
   "openlmisServerURL": "",
   "authServiceURL": "/",
   "requisitionServiceURL": "/",
-  "ordersServiceURL": "/"
+  "fullfilmentServiceURL": "/"
 }
