OLMIS-1085: added pagination directive to full supply screen

--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
   "openlmisServerURL": "",
   "authServiceURL": "/",
   "requisitionServiceURL": "/",
-  "fulfillmentServiceURL": "/"
+  "fulfillmentServiceURL": "/",
+  "pageSize": 10
 }
