--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "openlmis",
+  "name": "openlmis-requisition-ui",
   "version": "3.0.0-beta-SNAPSHOT",
   "ignore": [
     "**/.*",
@@ -7,57 +7,6 @@
     "bower_components"
   ],
   "dependencies": {
-    "angular": "^1.6",
-    "angular-animate": "*",
-    "angular-cookies": "*",
-    "angular-loader": "*",
-    "angular-resource": "*",
-    "angular-route": "*",
-    "angular-sanitize": "*",
-    "angular-ui": "0.4.0",
-    "jquery": "^3",
-    "angular-local-storage": "*",
-    "underscore": "*",
-    "angular-bootstrap": "*",
-    "angular-ui-sortable": "*",
-    "jquery-ui": "^1",
-    "angular-ui-router": "*",
-    "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.6.3",
-    "bootbox": "4.4.0",
-    "ngBootbox": "0.1.3",
-    "offline": "^0.7",
-    "angular-filter": "^0.5",
-    "angular-http-auth": "^1.5",
-    "angular-drag-and-drop-lists": "*",
-    "ngstorage": "^0.3.11",
-    "angular-strap": "*"
-  },
-  "overrides": {
-    "jquery": {
-      "main": [
-        "dist/jquery.js"
-      ]
-    },
-    "jquery-ui": {
-      "main": [
-        "jquery-ui.js"
-      ]
-    },
-    "angular-mocks": {
-      "main": []
-    },
-    "angular-ui": {
-      "main": [
-        "build/angular-ui.js",
-        "build/angular-ui.css"
-      ]
-    }
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.6"
-  },
-  "resolutions": {
-    "angular": "1.6.0"
+    "dev-ui": "/openlmis/dev-ui"
   }
 }
