OLMIS-1578: added new datepicker directive and remove our custom talbe css from it

--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-filter": "^0.5",
     "angular-http-auth": "^1.5",
     "angular-drag-and-drop-lists": "*",
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "angular-strap": "*"
   },
   "overrides": {
     "jquery": {
