OLMIS-1719: add and use default currency settings if cannot get from refdata

--- a/config.json
+++ b/config.json
@@ -16,5 +16,9 @@
   "authServiceURL": "/",
   "requisitionServiceURL": "/",
   "fulfillmentServiceURL": "/",
-  "pageSize": 10
+  "pageSize": 10,
+  "currencyCode": "USD",
+  "currencySymbol": "$",
+  "currencySymbolSide": "left",
+  "currencyDecimalPlaces": 2
 }
