--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "ngBootbox": "0.1.3",
     "angular-filter": "^0.5",
     "angular-http-auth": "^1.5",
-    "angular-drag-and-drop-lists": "*"
+    "angular-drag-and-drop-lists": "*",
+    "angular-strap": "*"
   }
 }
