OLMIS-1783 Load environment variables from env file
This is so TRANSIFEX_USER and TRANSIFEX_PASSWORD can be set in the CI machine and automatically used to sync with Transifex during the CI process.

--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -6,6 +6,7 @@ services:
       - '.:/app'
     command:
       - './build.sh'
+    env_file: .env
   image:
     build: .
     image: openlmis/requisition-refui
