OLMIS-1772: Update HTML title element from config

--- a/config.json
+++ b/config.json
@@ -20,5 +20,6 @@
   "currencySymbolSide": "left",
   "currencyDecimalPlaces": 2,
   "authServerClientId": "user-client",
-  "authServerClientSecret": "changeme"
+  "authServerClientSecret": "changeme",
+  "applicationTitle": "OpenLMIS"
 }
