OLMIS-1333: use new currency settings from reference data
* groupingSeparator
* groupingSize
* decimalSeparator

--- a/config.json
+++ b/config.json
@@ -19,6 +19,9 @@
   "currencySymbol": "$",
   "currencySymbolSide": "left",
   "currencyDecimalPlaces": 2,
+  "groupingSeparator": ",",
+  "groupingSize": 3,
+  "decimalSeparator": ".",
   "authServerClientId": "user-client",
   "authServerClientSecret": "changeme",
   "applicationTitle": "OpenLMIS"
