OLMIS-1661: Added gzip compression to nginx
Set level to 5, since it seems the most optimal overall.
Gzipping css, js and html.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,5 +2,9 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html index.html;
+
+        gzip on;
+        gzip_comp_level 5;
+        gzip_types text/css application/javascript;
     }
 }
