--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -1,7 +1,8 @@
 version: "2"
 services:
   builder:
-    image: openlmis/requisition-ui
+    image: openlmis/dev-ui
+    working_dir: /app
     volumes:
       - '.:/app'
     command:
