OLMIS-1584: Removed trasifex sync and put into dev-ui

--- a/config.json
+++ b/config.json
@@ -24,5 +24,6 @@
   "decimalSeparator": ".",
   "authServerClientId": "user-client",
   "authServerClientSecret": "changeme",
-  "applicationTitle": "OpenLMIS"
+  "applicationTitle": "OpenLMIS",
+  "transifexProjectName": "openlmis-requisition-ui"
 }
