OLMIS-1661, allow proxied requests and add types
Following some of the instructions found here:  http://reinout.vanrees.org/weblog/2015/11/19/nginx-proxy-gzip.html
As well as here: http://nginx.org/en/docs/http/ngx_http_gzip_module.html?&_ga=1.233248732.37146210.1484977007#gzip_proxied

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,8 @@ server {
         index index.html index.html;
 
         gzip on;
+        gzip_proxied any;
         gzip_comp_level 5;
-        gzip_types text/css application/javascript;
+        gzip_types text/css text/javascript text/plain application/javascript application/x-javascript ;
     }
 }
