OLMIS-1661, add favicon to gzip compression

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,6 @@ server {
         gzip on;
         gzip_proxied any;
         gzip_comp_level 5;
-        gzip_types text/css text/javascript text/plain application/javascript application/x-javascript ;
+        gzip_types text/css text/javascript text/plain application/javascript application/x-javascript image/x-icon;
     }
 }
