OLMIS-403 Add Analytics module and track page views
Add analytics module and new config setting analyticsTrackingId. Add GA code to index.html (this will eventually be replaced by downloading the analytics.js code during build time). Track page views during stateChangeSuccess.

--- a/config.json
+++ b/config.json
@@ -25,5 +25,6 @@
   "authServerClientId": "user-client",
   "authServerClientSecret": "changeme",
   "applicationTitle": "OpenLMIS",
-  "transifexProjectName": "openlmis-requisition-ui"
+  "transifexProjectName": "openlmis-requisition-ui",
+  "analyticsTrackingId": "UA-35478705-4"
 }
