OLMIS-403: Added analyticsService
- Added the google analytics library through bower
- Added unit tests
- Added documentation

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-http-auth": "^1.5",
     "angular-drag-and-drop-lists": "*",
     "angular-strap": "*",
-    "angular-md5": "0.1.10"
+    "angular-md5": "0.1.10",
+    "analytics": "https://www.google-analytics.com/analytics.js"
   }
 }
