OLMIS-1933 Change infrastructure/dev images from latest to 1
Moving away from latest to versioned image.

--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   builder:
-    image: openlmis/dev-ui
+    image: openlmis/dev-ui:1
     working_dir: /app
     volumes:
       - '.:/app'
