OLMIS=1993: Simplified loading screen
- Added onload script to page to simplify loading

--- a/config.json
+++ b/config.json
@@ -25,6 +25,7 @@
   "authServerClientId": "user-client",
   "authServerClientSecret": "changeme",
   "applicationTitle": "OpenLMIS",
+  "applicationLoadingMessage": "Starting OpenLMIS",
   "transifexProjectName": "openlmis-requisition-ui",
   "analyticsTrackingId": "UA-35478705-4"
 }
