OLMIS-1990: Added openlmisDate filter to define date format in config file

--- a/config.json
+++ b/config.json
@@ -28,5 +28,6 @@
   "applicationLoadingMessage": "Starting OpenLMIS",
   "transifexProjectName": "openlmis-requisition-ui",
   "defaultLanguage": "en",
-  "analyticsTrackingId": "UA-35478705-4"
+  "analyticsTrackingId": "UA-35478705-4",
+  "defaultDateFormat": "shortDate"
 }
