OLMIS-1990: Changed default date format and datepicker directive

--- a/config.json
+++ b/config.json
@@ -29,5 +29,5 @@
   "transifexProjectName": "openlmis-requisition-ui",
   "defaultLanguage": "en",
   "analyticsTrackingId": "UA-35478705-4",
-  "defaultDateFormat": "shortDate"
+  "defaultDateFormat": "dd/MM/yyyy"
 }
