OLMIS-2115: Make it possible to read variables from env file in grunt tasks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     working_dir: /app
     volumes:
       - '.:/app'
+    env_file: .env
   image:
     build: .
     image: openlmis/requisition-ui
