OLMIS-1025: Changed implementation details

--- a/config.json
+++ b/config.json
@@ -2,18 +2,7 @@
   "app": {
     "src": "./src"
   },
-  "styleguide": {
-  	"src": "src/",
-  	"dest": "build/styleguide"
-  },
-  "docs": {
-    "src": "./docs",
-    "dest": "./build/docs"
-  },
   "openlmisServerURL": "",
-  "authServiceURL": "/",
-  "requisitionServiceURL": "/",
-  "fulfillmentServiceURL": "/",
   "pageSize": 10,
   "currencyCode": "USD",
   "currencySymbol": "$",
@@ -22,13 +11,7 @@
   "groupingSeparator": ",",
   "groupingSize": 3,
   "decimalSeparator": ".",
-  "authServerClientId": "user-client",
-  "authServerClientSecret": "changeme",
-  "applicationTitle": "OpenLMIS",
-  "applicationLoadingMessage": "Starting OpenLMIS",
-  "transifexProjectName": "openlmis-requisition-ui",
+  "transifexProjectName": "openlmis-ui-components",
   "defaultLanguage": "en",
-  "analyticsTrackingId": "UA-35478705-4",
-  "defaultDateFormat": "dd/MM/yyyy",
-  "defaultDatetimeFormat": "dd/MM/yyyy HH:mm:ss"
+  "analyticsTrackingId": "UA-CHANGE-ME",
 }
