--- a/config.json
+++ b/config.json
@@ -13,5 +13,5 @@
   "decimalSeparator": ".",
   "transifexProjectName": "openlmis-ui-components",
   "defaultLanguage": "en",
-  "analyticsTrackingId": "UA-CHANGE-ME",
+  "analyticsTrackingId": "UA-CHANGE-ME"
 }
