--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,19 @@
 {
   "dependencies": {
+    "font-awesome": "^4.6.3",
     "bootbox": "4.4.0",
     "ngBootbox": "0.1.3",
     "angular-filter": "^0.5",
     "angular-strap": "*",
     "analytics": "https://www.google-analytics.com/analytics.js",
     "autosize-input": "https://raw.githubusercontent.com/yuanqing/autosize-input/master/autosize-input.js"
+  },
+  "overrides": {
+    "font-awesome": {
+      "main": [
+        "scss/font-awesome.scss",
+        "fonts/fontawesome-webfont.woff"
+      ]
+    }
   }
 }
