OLMIS-2476: Added select2.js
- Added and styled select2 (removed tests for now)
- Removed unknownOption behavior from selectCtrl
- Made select2 look like popover element
- Renamed files to select-select2 for clarity

--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,5 @@
 {
+  "name": "openlmis-ui-components",
   "dependencies": {
     "font-awesome": "^4.6.3",
     "bootbox": "4.4.0",
@@ -6,13 +7,19 @@
     "angular-filter": "^0.5",
     "angular-strap": "*",
     "analytics": "https://www.google-analytics.com/analytics.js",
-    "autosize-input": "https://raw.githubusercontent.com/yuanqing/autosize-input/master/autosize-input.js"
+    "autosize-input": "https://raw.githubusercontent.com/yuanqing/autosize-input/master/autosize-input.js",
+    "select2": "^4.0.3"
   },
   "overrides": {
     "font-awesome": {
       "main": [
         "scss/font-awesome.scss",
         "fonts/fontawesome-webfont.woff"
+      ]
+    },
+    "select2": {
+      "main": [
+        "dist/js/select2.js"
       ]
     }
   }
