OLMIS-249: Fixed datepicker date format and initial value

--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
   "defaultLanguage": "en",
   "analyticsTrackingId": "UA-CHANGE-ME",
   "defaultDateFormat": "dd/MM/yyyy",
+  "defaultDatepickerFormat": "dd/mm/yyyy",
   "defaultDatetimeFormat": "dd/MM/yyyy HH:mm:ss"
 }
