--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "autosize-input": "https://raw.githubusercontent.com/yuanqing/autosize-input/master/autosize-input.js",
     "select2": "^4.0.3",
     "js-shortid": "shortid#^0.1.1",
-    "bootstrap-datepicker": "1.7"
+    "bootstrap-datepicker": "1.7",
+    "pouchdb": "^6.3.4"
   },
   "overrides": {
     "font-awesome": {
